--- a/config/database.yml
+++ b/config/database.yml
@@ -14,8 +14,8 @@ development:
   encoding: unicode
   database: rails_questions
   pool: 5
-  username: vagrant
-  password: vagrant
+  username: raysapida
+  password:
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
